<resources>
    <string name="app_name">Awesome Movie</string>
    <string name="demo_back">Back</string>
    <string name="demo_age_rating">13+</string>
    <string name="demo_title">Avengers: \nEnd Game</string>
    <string name="demo_genre_tags">Action, Adventure, Fantasy</string>
    <string name="demo_reviews">125 reviews</string>
    <string name="demo_storyline_title">Storyline</string>
    <string name="demo_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="demo_cast">Cast</string>
    <string name="demo_name_person_one">Robert Downey Jr.</string>
    <string name="demo_name_person_two">Chris Evans</string>
    <string name="demo_name_person_three">Mark Ruffalo</string>
    <string name="demo_name_person_four">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 MIN</string>
</resources>