<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/bottom_space">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/movie_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />

        <View
            android:id="@+id/movie_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/mask"
            app:layout_constraintBottom_toBottomOf="@id/movie_banner"
            app:layout_constraintEnd_toEndOf="@id/movie_banner"
            app:layout_constraintStart_toStartOf="@id/movie_banner"
            app:layout_constraintTop_toTopOf="@id/movie_banner" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/minimum_margin"
            android:layout_marginTop="@dimen/top_space"
            android:drawablePadding="@dimen/small_margin"
            android:text="@string/back"
            android:textColor="@color/grey"
            android:textSize="@dimen/small_font_size"
            app:drawableLeftCompat="@drawable/ic_arrow_back"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_age_rating"
            android:text="@string/demo_age_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:maxWidth="240dp"
            android:text="@string/demo_title"
            android:textColor="@color/whisper"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genre_tags"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/age_rating" />

        <TextView
            android:id="@+id/genre_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/demo_genre_tags"
            android:textColor="@color/radical_red"
            android:textSize="@dimen/medium_font_size"
            app:layout_constraintBottom_toTopOf="@+id/rating_bar"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <RatingBar
            android:layout_marginTop="@dimen/small_margin"
            android:id="@+id/rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:rating="4"
            android:theme="@style/CustomRatingBar"
            app:layout_constraintBottom_toTopOf="@+id/storyline_title"
            app:layout_constraintEnd_toStartOf="@id/reviews"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/genre_tags" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_reviews"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toTopOf="@id/rating_bar" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            android:text="@string/storyline_title"
            android:textColor="@color/whisper"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/storyline"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textFontWeight="50"
            android:text="@string/demo_storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font_size"
            app:layout_constraintBottom_toTopOf="@+id/cast_title"
            app:layout_constraintEnd_toStartOf="@id/gl_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/cast"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            android:textColor="@color/whisper"
            app:layout_constraintBottom_toTopOf="@+id/barrier"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="img_person_one, img_person_two, img_person_three, img_person_four"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_title" />

        <ImageView
            android:id="@+id/img_person_one"
            style="@style/PersonImage"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/downey"
            app:layout_constraintBottom_toTopOf="@id/name_person_one"
            app:layout_constraintEnd_toStartOf="@id/img_person_two"
            app:layout_constraintStart_toEndOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/name_person_one"
            style="@style/PersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/demo_name_person_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/img_person_one"
            app:layout_constraintStart_toStartOf="@id/img_person_one"
            app:layout_constraintTop_toBottomOf="@id/img_person_one" />

        <ImageView
            android:id="@+id/img_person_two"
            style="@style/PersonImage"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/evans"
            app:layout_constraintEnd_toStartOf="@id/img_person_three"
            app:layout_constraintStart_toEndOf="@id/img_person_one"
            app:layout_constraintTop_toTopOf="@+id/img_person_one" />

        <TextView
            android:id="@+id/name_person_two"
            style="@style/PersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/demo_name_person_two"
            app:layout_constraintEnd_toEndOf="@id/img_person_two"
            app:layout_constraintStart_toStartOf="@id/img_person_two"
            app:layout_constraintTop_toBottomOf="@id/img_person_two" />

        <ImageView
            android:id="@+id/img_person_three"
            style="@style/PersonImage"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/ruffalo"
            app:layout_constraintEnd_toStartOf="@id/img_person_four"
            app:layout_constraintStart_toEndOf="@id/img_person_two"
            app:layout_constraintTop_toTopOf="@+id/img_person_two" />

        <TextView
            android:id="@+id/name_person_three"
            style="@style/PersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/demo_name_person_three"
            app:layout_constraintEnd_toEndOf="@id/img_person_three"
            app:layout_constraintStart_toStartOf="@id/img_person_three"
            app:layout_constraintTop_toBottomOf="@id/img_person_three" />

        <ImageView
            android:id="@+id/img_person_four"
            style="@style/PersonImage"
            android:src="@drawable/hemsworth"
            app:layout_constraintEnd_toStartOf="@id/gl_right"
            app:layout_constraintStart_toEndOf="@id/img_person_three"
            app:layout_constraintTop_toTopOf="@+id/img_person_three" />

        <TextView
            android:id="@+id/name_person_four"
            style="@style/PersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/demo_name_person_four"
            app:layout_constraintEnd_toEndOf="@id/img_person_four"
            app:layout_constraintStart_toStartOf="@id/img_person_four"
            app:layout_constraintTop_toBottomOf="@id/img_person_four" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>